# funnyboard

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
funnyboard/: config.py  dps.py
funnyboard/twitter/: client.py  schema.py
